--- a/Capstone Project/Loan Analysis Predicting Defaulters/Final_Project_File.ipynb
+++ b/Capstone Project/Loan Analysis Predicting Defaulters/Final_Project_File.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Script By\n",
     "\n",
-    "Rachit Agarwal https://www.linkedin.com/in/rac05\n",
+    "Rachit Agarwal https://www.linkedin.com/in/racag\n",
     "\n",
     "### ABSTRACT\n",
     "The main income earning assets for a bank are loans. A bank’s profit or a loss depends to a large extent on loans i.e. whether the customers are paying back the loan or defaulting. By predicting the loan defaulters, the bank can reduce its NonPerforming Loans. A very important approach in predictive analytics is used to study the problem of predicting loan defaulters."
